# chrome-cursor-mcp

./: .gitignore  README.md  bridge_controller_test.py  bridge_full_test.py  bridge_test.py  mcp_server.py  mcp_server_log.txt  package-lock.json  package.json  simple_mcp_server.py  simple_test.py  test_open_tab.py  working_mcp_server.py
chrome-mcp/: README.md  background.js  content.js  manifest.json  pyproject.toml
chrome-mcp/src/chrome_mcp/: server.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
server/: pyproject.toml
server/src/chrome_mcp/: bridge.py  server.py
