[project]
name = "chrome-mcp"
version = "0.1.0"
description = "Standalone MCP server for controlling Chrome via a local bridge WebSocket"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.2.0",
  "websockets>=10.0",
  "openai>=1.14.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chrome_mcp"]
package-dir = {"" = "src"}

[project.scripts]
chrome-mcp = "chrome_mcp.server:main"
